# OSi

LR3/: CMakeLists.txt
LR_1/: CMakeLists.txt  report.docx  report1.docx
LR_1/src/: child (1).cpp
LR_1/tests/: test1.txt  test2.txt
LR_2/: report.docx
LR_2/src/: main.cpp
LR_3/: report.docx
LR_3/src/: main.cpp
LR_4/: CMakeLists(4 лаба).txt
LR_4/doc/: report .docx
LR_4/src/: child.cpp  main.cpp
LR_4/tests/: test.txt  test2.txt  test3.txt
LR_5/: CMakeLists.txt
LR_5/doc/: report.docx
LR_5/include/: lib.h  types.h
LR_5/src/: lib1.cpp  lib2.cpp  main1.cpp  main2.cpp
LR_6-8/: CMakeLists.txt
LR_6-8/doc/: report 6-8.docx
LR_6-8/src/: Makefile  main.cpp
OSKP/: CMakeLists.txt
OSKP/doc/: report.docx
OSKP/src/: allocator_list.cpp  allocator_list.h  allocator_mkk.cpp  allocator_mkk.h  main.cpp
OSlaba6-8/OSlaba6-8/src/: client.cpp  tree.cpp  tree.h
